partial collapse fix

--- a/css/screen.css
+++ b/css/screen.css
@@ -1712,15 +1712,30 @@ main div.content h3:enabled {
   }
 
   .collapsetstyle {
-    display: none;
-    position: absolute;
+    /* display: none; */
+    /* position: absolute; */
     top: .1em;
     right: .1em;
     width: 100%;
     height: 2em;
-    position:absolute;
+    transition: all 0.5s;
+    /* position:absolute; */
     /* position: static; */
    }
+  i.collapsetstyle:before {
+    display: inline-block;
+    padding-left: 4px;
+    -webkit-transform: rotate(90deg);
+    -moz-transform: rotate(90deg);
+    transform: rotate(90deg);
+
+ }
+
+ i.collapsetstyle.collapsed:before {
+   -webkit-transform: rotate(0deg);
+   -moz-transform: rotate(0deg);
+   transform: rotate(0deg);
+  }
 
   #lbrnEventSidebar {
     display: none; }
@@ -2637,7 +2652,7 @@ div.research img{
    }
 
   .collapsetstyle{
-    display:none !important;
+    /* display:none !important; */
   }
 
   #uni{
@@ -3164,8 +3179,8 @@ section.directory article.person{
       background-color: unset;
 }
 
-  .collapsetstyle {
-    color: white; }
+  /* .collapsetstyle {
+    color: white; } */
 
   .collapsenobs {
     height: inherit; }
